syntax = "proto3";

package com.metrocarpool.events;

// Optionally define the Java package
option java_multiple_files = true;
option java_package = "com.metrocarpool.contracts.proto";
option java_outer_classname = "DriverRideCompletionEventMessage";

// The Kafka event definition
message DriverRideCompletionEvent {
  int64 driverId = 1;
  string messageId = 2;
}
